--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
                 <option value="married">Married</option>
             </select>
 
-            <label for="sex">Sex:</label>
+            <label for="sex">Gender:</label>
             <select name="sex" id="sex" required>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
