Updating index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,14 +52,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>Budgeting Rule Predictor</h1>
+        <h1>Salary Allocation IDSS</h1>
         <form action="/predict" method="POST">
-            <input type="number" name="salary" placeholder="Salary (SAR)" required>
+            <input type="number" name="salary" placeholder="Net income (SAR)" required>
             <input type="number" name="monthly_debt" placeholder="Monthly Debt (SAR)" required>
             <input type="number" name="elementary_expenses" placeholder="Elementary Expenses (SAR)" required>
             <input type="number" name="number_of_children" placeholder="Number of Children" required>
 
-            <label for="state">State:</label>
+            <label for="state">Marital Status:</label>
             <select name="state" id="state" required>
                 <option value="single">Single</option>
                 <option value="married">Married</option>
