Updating model.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,6 +75,7 @@
             <select name="goal" id="goal" required>
                 <option value="savings">Savings</option>
                 <option value="investment">Investment</option>
+                <option value="spending">Spending</option>
             </select>
 
             <label for="employment_status">Employment Status:</label>
